--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task 1, 2, 3</title>
+    <title>Task 1, 2, 3, 4</title>
   </head>
   <body>
     <h1>Homeworks: Task 1, 2, 3, 4</h1>
